Filtering, preventing stories to float out, prevent overlapping title, old functionality removed from code, almost there:)

--- a/themes/custom/mat/sass/pages/_storiesapi.scss
+++ b/themes/custom/mat/sass/pages/_storiesapi.scss
@@ -82,6 +82,7 @@ $option-width: 70px;
   top: 0;
   height: 100%;
   width: 100%;
+  z-index: 2;
   //z-index: 1;
   @include gradient(90deg, #0f84d2, #0f84d2, #0b145e);
 
@@ -160,20 +161,30 @@ $option-width: 70px;
 }
 
 .slider-wrapper .container-small {
-  
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
   * {
     opacity: 1;
     transition: opacity 1s linear;
+    z-index: 10;
   }
   &.fade-out * {
     opacity: 0;
+  }
+
+  p {
+    display: inline-block;
   }
 }
 .stories-api {
   .small-item {
     border-radius: 50%;
-    width: 0;
-    height: 0;
+    width: 60px;
+    height: 60px;
     opacity:0;
     position: absolute;
     z-index: 4;
@@ -249,6 +260,7 @@ $option-width: 70px;
     background-position: center;
     background-size: cover;
     border: solid 3px rgba(255,255,255,0.8);
+    transform: translate(-150px);
     z-index: 5;
     box-shadow: 0 0 50px rgba(255,255,255, 1);
     filter: blur(3.4px) brightness(1);
@@ -767,7 +779,7 @@ $option-width: 70px;
 
 $mobile-item-margin: 40px;
 $mobile-item-size: 100px;
-@media (max-width: $screen-xs-max) {
+@media (max-width: $screen-sm-max) {
   .slider-wrapper {
     height: 100%;
     max-height: unset;
@@ -792,7 +804,7 @@ $mobile-item-size: 100px;
   }
   .stories-api {
     background: transparent;
-    position: unset;
+    position: absolute;
 
 
     .item {
@@ -998,7 +1010,7 @@ $mobile-item-size: 100px;
     }
 }
 
-.controls .filter-wrapper .bold.cat-item {
+.controls .filter-wrapper .active.cat-item {
     font-weight: bold !important;
     color: #4a4a4a;
 }
